deployments/kubernetes/chaos-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-operator
  labels:
    app: chaos-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chaos-operator
  template:
    metadata:
      labels:
        app: chaos-operator
    spec:
      serviceAccountName: chaos-operator
      containers:
      - name: chaos-operator
        image: chaos-engineering-as-a-platform/chaos-operator:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: kubeconfig
          mountPath: /app/kubeconfig.yaml
          subPath: kubeconfig.yaml
      volumes:
      - name: kubeconfig
        configMap:
          name: chaos-operator-kubeconfig
